classDiagram
    class MainWindow {
        -ui: Ui::MusicMachine*
        -audioEngine: std::unique_ptr~AudioEngine~
        -midiPlayer: std::unique_ptr~MidiPlayer~
        -soundfontPath: QString
        +MainWindow(parent: QWidget*)
        +~MainWindow()~
        -onPlayClicked() void
        -onResetClicked() void
        -onOpenClicked() void
        -onSaveClicked() void
        -onExportMidiClicked() void
        -onAboutTriggered() void
        -onInstrumentChanged(index: int) void
        -onVolumeChanged(value: int) void
        -setupConnections() void
        -updatePlaybackUI() void
        -findSoundFont() QString
    }

    class AboutDialog {
        -ui: Ui::AboutDialog*
        +AboutDialog(parent: QWidget*)
        +~AboutDialog()~
        -onSourceCodeClicked() void
    }

    class IAudioOutput {
        <<interface>>
        +initialize(sfPath: string) bool
        +noteOn(channel: int, key: int, velocity: int) void
        +noteOff(channel: int, key: int) void
        +programChange(channel: int, program: int) void
        +setChannelVolume(channel: int, volume: int) void
        +shutdown() void
    }

    class AudioEngine {
        -settings_: settings*
        -synth_: synth*
        -adriver_: adriver*
        -soundfontId_: int
        -isPlaying_: bool
        +AudioEngine()
        +~AudioEngine()~
        +initialize(sfPath: string) bool
        +noteOn(channel: int, key: int, velocity: int) void
        +noteOff(channel: int, key: int) void
        +programChange(channel: int, program: int) void
        +setChannelVolume(channel: int, volume: int) void
        +shutdown() void
    }

    class MidiPlayer {
        -audioOutput_: IAudioOutput*
        -playbackThread_: thread
        -isPlaying_: atomic~bool~
        -isPaused_: atomic~bool~
        -masterVolume_: atomic~int~
        -playbackEvents_: vector~PlaybackEvent~
        -initialBpm_: int
        -activeNotes_: set~pair~int_int~~
        -stateMutex_: mutex
        +MidiPlayer(parent: QObject*)
        +~MidiPlayer()~
        +initialize(audioOutput: IAudioOutput*) void
        +play(voices: vector~Voice~, initialBpm: int) void
        +pause() void
        +resume() void
        +stop() void
        +setMasterVolume(volume: int) void
        +isPlaying() bool
        +isPaused() bool
        -playbackLoop() void
        -dispatch(event: const MidiEvent&) void
    }

    class Voice {
        -instrument: int
        -volume: int
        -octave: int
        -initialDelay: int
        -noteQueue: queue~MidiEvent~
        -lastNote: int
        -isPlaying: bool
        +reset(baseInstrument: int, baseVolume: int, baseOctave: int, delay: int) void
        +setInstrument(instrumentId: int) void
        +setVolume(vol: int) void
        +setOctave(oct: int) void
        +enqueueNote(note: int, duration: float, volume: int) void
        +enqueueSilence(duration: float) void
        +getNextEvent() MidiEvent
        +hasEvents() bool
    }

    class ITextParser {
        <<interface>>
        +parse(text: const string&, initialBpm: int) vector~Voice~
    }

    class TextParser {
        -charRules_: unordered_map~char_Action~
        -defaultInstrument_: int
        +TextParser()
        +parse(text: const string&, initialBpm: int) vector~Voice~
        +setDefaultInstrument(instrument: int) void
        -buildRules() void
        -parseDelay(line: const string&, pos: size_t&) int
        -processCharacter(c: char, voice: Voice&) void
    }

    class MidiWriter {
        -writer_: libremidi::writer
        -TICKS_PER_BEAT: int
        +MidiWriter()
        +~MidiWriter()~
        +createFile() void
        +writeVoiceTrack(trackIndex: int, voice: Voice) void
        +save(filepath: const string&) bool
    }

    class MidiEvent {
        +type: MidiEventType
        +pitch: int
        +velocity: int
        +timestamp: double
        +duration: double
        +channel: int
        +value: int
    }

    class MidiEventType {
        <<enumeration>>
        NoteOn
        NoteOff
        ProgramChange
        VolumeChange
        BpmChange
    }

    IAudioOutput <|.. AudioEngine
    ITextParser <|.. TextParser

    MainWindow *-- AudioEngine : creates/owns
    MainWindow *-- MidiPlayer : creates/owns
    MainWindow ..> AboutDialog : creates/opens
    MainWindow ..> ITextParser : uses
    MainWindow ..> MidiWriter : creates/uses

    MidiPlayer o-- IAudioOutput : references
    MidiPlayer *-- Voice : uses
    MidiPlayer ..> MidiEvent : dispatches

    TextParser ..> Voice : populates
    Voice *-- MidiEvent : queues
    MidiWriter ..> Voice : uses
    MidiEvent +-- MidiEventType
